modified the navbar and hero section

--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!doctype html>
-<html style="scroll-behavior: smooth" lang="en">
+<html data-theme="mytheme" style="scroll-behavior: smooth" lang="en">
   <head>
+
+<!-- custom theme styles  -->
+
+<!-- <style>
+  [data-theme="myCustomTheme2"] {
+    --color-primary: #01FC8B; /* Custom primary */
+    --color-secondary: #0FF1FF; /* Custom secondary */
+    --color-accent: #1F2A3B;
+    --color-base-100: #0F172A;
+    /* --neutral: #3D4451;
+    --base-100: #FFFFFF;
+    --info: #3ABFF8;
+    --success: #22C55E;
+    --warning: #FACC15;
+    --error: #EF4444; */
+  }
+</style> -->
+
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/hasib-formal  compressed square-min.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hasibul Hasan | Portfolio</title>
   </head>
-  <body class="dark:bg-gray-900 dark:text-white">
+  <body class="">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
