--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/hasib-formal  compressed square-min.png" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/portfolio.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hasibul Hasan | Portfolio</title>
+    <title>Tasnim Ferdous | Portfolio</title>
   </head>
   <body class="">
     <div id="root"></div>
